canary_release_count default value set for backward compatibility. ReadMe updated on how to use canary release.